<resources>
    <string name="app_name">Outbreak Advisor</string>
    <string name="go">Begin Assessment</string>
    <string name="sec_1_question_1">Have you travelled from Mainland China/Iran/South Korea/ Italy / other high burden country of COVID-19 infection in the last 14 days?</string>
    <string name="sec_1_question_2">Have you had close contact with any person , who has returned from Mainland China/Iran/South Korea/ Italy / other high burden country of COVID-19 infection in the last 14 days?</string>
    <string name="sec_1_question_3">Have you had close contact with a probable or confirmed case of COVID-19 in the last 14 days?</string>
    <string name="sec_1_question_4">Are you currently living with someone who was identified as a probable or confirmed case of COVID-19 within the last 14 days?</string>
    <string name="sec_2_question_1">Do you have fever?</string>
    <string name="sec_3_question_1">Do you have a cough?</string>
    <string name="sec_3_question_2">Do you have a cold?</string>
    <string name="sec_3_question_3">Do you have a sore throat?</string>
    <string name="sec_3_question_4">Do you have shortness of breath?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="question">Question</string>
    <string name="section">Section</string>
    <string name="terms_conditions">I accept the </string>
    <string name="login_info">* This app will anonymously collect the data you provide. No personally identifiable information will be requested or collected. The data may be analyzed or shared with third parties for research purposes. </string>
    <string name="agreed_with_the_terms_and_condition">I agree with the Terms and condition</string>
    <string name="your_score">Your Risk Score</string>
    <string name="score_detail">Your Risk score is %d you have a chance for development of COVID -19. Further, you need medical assistance, please visit the following designated hospitals for further medical workup.</string>
    <string name="no_indication">There is no indication that you are currently infected by COVID-19</string>
    <string name="no_chance">No Chance for development</string>
    <string name="low_probability">Low probability</string>
    <string name="high_probability">Moderate to High probability</string>
    <string name="instruction">Instructions</string>
    <string name="isolate_yourself">Isolate yourself in a separate room of your home and limit your movement there</string>
    <string name="avoid_close_contact">Keep items of your personal use separate from other family members</string>
    <string name="use_masked">Use a mask 24 hours and change it when it becomes soaked or dirty</string>
    <string name="wash_hands">Wash your hands with water and soap regularly for at least 20 seconds</string>
    <string name="question_title_exposure">Exposure</string>
    <string name="question_title_symptoms">Symptoms</string>

    <string name="civil_hospital">Civil Hospital, Karachi</string>
    <string name="jinnah_hospital">Jinnah Hospital, Karachi</string>
    <string name="dow_hospital">Dow University OJHA Hospital, Karachi</string>
    <string name="aga_khan_hospital">Aga Khan Hospital, Karachi</string>

    <string name="other_contacts">-----  Or you can contact any of the given helplines anytime  -----</string>

    <string name="wash_hands_instruction">Wash your hands often with soap and water for at least 20 seconds especially after you have been in a public place, or after blowing your nose, coughing, or sneezing.</string>
    <string name="close_contact">Avoid close contact with people who are sick</string>
    <string name="use_facemask">If you are sick:  You should wear a facemask when you are around other people (e.g., sharing a room or vehicle) and before you enter a healthcare provider’s office.</string>

    <string name="precaution_taken">Precautions to be taken</string>
    <string name="error_term_condition"><![CDATA[Please Accept the Term & conditions]]></string>
    <string name="high_burden_countries">High Burden Countries</string>
    <string name="ok">ok</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="terms_and_conditions"><u> Terms and Conditions</u></string>
    <string name="disclaimer"><u>Disclaimer</u></string>
    <string name="disclaimer_details">This is a screening tool and not a diagnostic test. Please consult a doctor for diagnosis.</string>
    <string name="our_partners"><u>Our Partners</u></string>


</resources>