<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.InstructionActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_main"
        android:orientation="vertical"
        android:padding="@dimen/padding_large"
        tools:context=".activities.ResultActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/section"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/instruction"
            android:textColor="@color/white"
            android:textSize="33sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_50sdp"
            android:layout_alignParentRight="true"
            android:src="@drawable/ic_ihs_logo" />


    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:background="@color/white" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/isolate_yourself"
            android:drawableLeft="@drawable/ic_protection"
            android:drawablePadding="@dimen/_7sdp"
            android:textColor="@color/white"
            android:layout_marginTop="@dimen/_10sdp"
            android:gravity="center_vertical"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/avoid_close_contact"
            android:drawableLeft="@drawable/ic_bags"
            android:drawablePadding="@dimen/_7sdp"
            android:textColor="@color/white"
            android:layout_marginTop="@dimen/_10sdp"
            android:gravity="center_vertical"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/use_masked"
            android:drawableLeft="@drawable/ic_mask"
            android:textColor="@color/white"
            android:drawablePadding="@dimen/_7sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:gravity="center_vertical"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/wash_hands"
            android:drawableLeft="@drawable/ic_wash_hands"
            android:textColor="@color/white"
            android:drawablePadding="@dimen/_7sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:gravity="center_vertical"
            />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
